[tool.poetry]
name = "performance-testing"
version = "0.1.0"
description = ""
authors = ["oskarissimus <oskar.korczak@protonmail.com>"]
readme = "README.md"
packages = [{include = "performance_testing"}]

[tool.poetry.dependencies]
python = "^3.10"
locust = "^2.14.1"


[tool.poetry.group.dev.dependencies]
pylint = "^2.15.9"
mypy = "^0.991"
isort = "^5.11.4"
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
